chore: 添加环境变量配置

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
-BASE_URL=/
+BASE_URL=http://insight-market.uni-ubi.com/
 VUE_APP_BASE_API=/api
 VUE_APP_OSS_PREFIX=http://insight-market.uni-ubi.com
